<resources>
    <string name="app_name">Luagro</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="nombre_de_producto">Nombre de producto</string>
    <string name="precio_cop">Precio (COP)</string>
    <string name="_0">$0</string>
    <string name="categor_a">Categoría</string>
    <string name="descripci_n">Descripción</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="origen_finca">Origen / finca</string>
    <string name="origen_del_producto">Origen del producto</string>
    <string name="stock_disponible">Stock disponible</string>
    <string name="cantidad_disponible">Cantidad disponible</string>
    <string name="guardar_producto">Guardar producto</string>
    <string name="hola">Hola 👋</string>
    <string name="administrador">Administrador</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="bienvenido_administrador">Bienvenido Administrador</string>
    <string name="_250">250</string>
    <string name="usuarios">Usuarios</string>
    <string name="_5m">$5M</string>
    <string name="ventas">Ventas</string>
    <string name="gesti_n">Gestión</string>
    <string name="gestionar_usuarios">Gestionar usuarios</string>
    <string name="gestionar_productos">Gestionar productos</string>
    <string name="reporte_de_ventas">Reporte de ventas</string>
    <string name="hola2">Hola 👋</string>
    <string name="bogot_colombia">📍 Bogotá, Colombia</string>
    <string name="cerrar_sesi_n2">Cerrar sesión</string>
    <string name="buscar_productos">Buscar productos...</string>
    <string name="mi_carrito">Mi carrito</string>
    <string name="mis_compras">Mis compras</string>
    <string name="categor_as">Categorías</string>
    <string name="ver_todas">Ver todas</string>
    <string name="productos_destacados">Productos destacados</string>
    <string name="ver_todas2">Ver todas</string>
    <string name="continuar_compra">Continuar compra</string>
    <string name="compra_realizada">¡Compra realizada!</string>
    <string name="tu_pedido_fue_procesado_exitosamente">Tu pedido fue procesado exitosamente.</string>
    <string name="pedido_lua2026">Pedido #LUA2026</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingresa_tu_correo_electr_nico_para_recuperar_el_acceso">Ingresa tu correo electrónico para recuperar el acceso.</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="enviar_enlace">Enviar enlace</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="correo_electr_nico2">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="ingresar_con_huella">Ingresar con huella</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="pedidos_recibidos">Pedidos recibidos</string>
    <string name="_2">2</string>
    <string name="pendientes">Pendientes</string>
    <string name="enviados">Enviados</string>
    <string name="entregados">Entregados</string>
    <string name="pedido">Pedido</string>
    <string name="la2026_013489">#LA2026-013489</string>
    <string name="pendiente">Pendiente</string>
    <string name="cliente">Cliente</string>
    <string name="pedro_lopez">Pedro Lopez</string>
    <string name="pedro_lopez_correo_com">pedro.lopez@correo.com</string>
    <string name="_315_5478866">315 5478866</string>
    <string name="productos">Productos</string>
    <string name="tomate_org_nico">Tomate orgánico</string>
    <string name="_8_400">$ 8.400</string>
    <string name="_2kg">2kg</string>
    <string name="total">Total</string>
    <string name="_15_800">$15.800</string>
    <string name="direcci_n_de_entrega">Dirección de entrega</string>
    <string name="calle_1_2_3_torre_5_apto_902">Calle 1 #2-3 Torre 5 Apto 902</string>
    <string name="bogot_colombia2">Bogotá, Colombia</string>
    <string name="marcar_como_enviado">Marcar como enviado</string>
    <string name="hola_usuario">Hola, Usuario 👋</string>
    <string name="bogot_colombia3">📍 Bogotá, Colombia</string>
    <string name="tomates_org_nicos">Tomates Orgánicos</string>
    <string name="_12_000">$12.000</string>
    <string name="cantidad_1">Cantidad: 1</string>
    <string name="direcci_n_de_entrega3">Dirección de entrega</string>
    <string name="ingresa_tu_direcci_n">Ingresa tu dirección</string>
    <string name="m_todo_de_pago">Método de pago</string>
    <string name="tarjeta_cr_dito">Tarjeta crédito</string>
    <string name="pse">PSE</string>
    <string name="contra_entrega">Contra entrega</string>
    <string name="total3">Total</string>
    <string name="_12_0004">$12.000</string>
    <string name="confirmar_pago">Confirmar pago</string>
    <string name="hola_usuario4">Hola, Usuario 👋</string>
    <string name="bogot_colombia4">📍 Bogotá, Colombia</string>
    <string name="tomates_org_nicos4">Tomates Orgánicos</string>
    <string name="_12_0005">$12.000</string>
    <string name="descripci_n4">Descripción</string>
    <string name="producto_org_nico_cultivado_sin_pesticidas_fresco_saludable_y_directo_del_productor">Producto orgánico cultivado sin pesticidas. Fresco, saludable y directo del productor.</string>
    <string name="origen">Origen</string>
    <string name="signo1">-</string>
    <string name="stock_disponible5">Stock disponible</string>
    <string name="signo2">-</string>
    <string name="categor_a5">Categoría</string>
    <string name="signo3">-</string>
    <string name="vendido_por">Vendido por</string>
    <string name="signo4">-</string>
    <string name="cantidad">Cantidad</string>
    <string name="signo5">-</string>
    <string name="_1">1</string>
    <string name="signo6">+</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="mi_perf_l">Mi perfíl</string>
    <string name="juan_p_rez">Juan Pérez</string>
    <string name="juan_email_com">juan@email.com</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesi_n6">Cerrar sesión</string>
    <string name="crear_cuenta7">Crear cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico7">Correo electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="contrase_a7">Contraseña</string>
    <string name="confirmar_contrase_a7">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="reporte_de_ventas7">Reporte de ventas</string>
    <string name="administrador7">Administrador</string>
    <string name="_12_500_0007">$12.500.000</string>
    <string name="ventas_mensuales">Ventas mensuales</string>
    <string name="resumen">Resumen</string>
    <string name="productos_vendidos_230">• Productos vendidos: 230</string>
    <string name="usuarios_registrados_540">• Usuarios registrados: 540</string>
    <string name="pedidos_procesados_120">• Pedidos procesados: 120</string>
    <string name="hola8">Hola 👋</string>
    <string name="vendedor8">Vendedor</string>
    <string name="cerrar_sesi_n8">Cerrar sesión</string>
    <string name="resumen8">Resumen</string>
    <string name="_34">34</string>
    <string name="productos8">Productos</string>
    <string name="_28">28</string>
    <string name="pedidos">Pedidos</string>
    <string name="_854k">$854K</string>
    <string name="ventas0">Ventas</string>
    <string name="accesos_r_pidos">Accesos rápidos</string>
    <string name="mis_productos">Mis productos</string>
    <string name="pedidos_recibidos4">Pedidos recibidos</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="mi_perfil">Mi perfil</string>
</resources>