<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/light_gray">



    <!-- Ícono -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/pago_confirmado"/>
    <!--app:tint="@color/primary_green"-->

<!-- Título -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compra_realizada"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/text_primary"
        android:layout_marginTop="24dp"/>

    <!-- Mensaje -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu_pedido_fue_procesado_exitosamente"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <!-- Código pedido -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lua2026"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primary_green"
        android:layout_marginTop="24dp"/>

    <!-- Botón -->

    <Button
        android:id="@+id/btnBackHome"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/volver_al_inicio"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="40dp"/>

</LinearLayout>